# shell-pilot

./: .gitignore  README.md  install.sh  pyproject.toml
shell_pilot/: cache.py  cli.py  config.py  history.py
shell_pilot/ai/: client.py  prompts.py
shell_pilot/analyzers/: danger.py  redact.py  suggest.py
shell_pilot/hooks/: postcheck.py  precheck.py
tests/: test_cache.py  test_danger.py  test_history.py  test_redact.py  test_suggest.py
